package com.skkrypto.solar_beam.service;

import com.fasterxml.jackson.core.JsonFactory;
import com.fasterxml.jackson.core.JsonGenerator;
import com.fasterxml.jackson.core.JsonParser;
import com.fasterxml.jackson.core.JsonToken;
import com.fasterxml.jackson.databind.JsonNode;
import com.fasterxml.jackson.databind.ObjectMapper;
import com.skkrypto.solar_beam.dto.SolanaTransactionDto;
import com.skkrypto.solar_beam.entity.Block;
import com.skkrypto.solar_beam.entity.BlockId;
import com.skkrypto.solar_beam.proto.SolanaTransaction;
import com.skkrypto.solar_beam.repository.BlockRepository;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.amqp.rabbit.core.RabbitTemplate;
import org.springframework.stereotype.Service;
import com.google.protobuf.util.JsonFormat;
import com.skkrypto.solar_beam.proto.*;


import java.time.Instant;
import java.time.OffsetDateTime;


import java.io.IOException;
import java.time.ZoneOffset;
import java.util.ArrayList;
import java.util.List;


@Service
public class OrchestraQuickNodeService {

    private static final Logger logger = LoggerFactory.getLogger(OrchestraQuickNodeService.class);

    // parsingìš© ì˜¤ë¸Œì íŠ¸ ë§µí¼
    private final ObjectMapper objectMapper;
    private final BlockRepository blockRepository;
    private final RabbitTemplate rabbitTemplate;

    public OrchestraQuickNodeService(ObjectMapper objectMapper, BlockRepository blockRepository, RabbitTemplate rabbitTemplate) {
        this.objectMapper = objectMapper;
        this.blockRepository = blockRepository;
        this.rabbitTemplate = rabbitTemplate;
    }

    // ì¸í’‹: slot, ìŠ¤íŠ¸ë¦¼ ë°ì´í„°
    public void orchestra(Long slot, byte[] buf) {
        JsonFactory factory = objectMapper.getFactory();
        factory.disable(JsonParser.Feature.AUTO_CLOSE_SOURCE);
        // parser ìƒì„± ì‹œë„
        try (JsonParser parser = factory.createParser(buf, 0, buf.length)) {
            // block
            Block block = parseMetaDataAndCreateBlock(slot, parser);
            // í¼ë¸”ë¦¬ì‹±
            Short total_chuncks = streamAndPublishChunks(parser, block.getBlockId());

            // í† íƒˆ ì²­í¬ ì €ì¥
            block.setTotalChunks(total_chuncks);

            // ë¹„ë™ê¸°ë¡œ ì²˜ë¦¬ ë  ê°€ëŠ¥ì„±..
            blockRepository.save(block);

        } catch (IOException e) {
            // ë¸”ëŸ­ ìƒíƒœë¥¼ failedë¡œ ë³€ê²½??
            throw new RuntimeException("Error processing stream for slot " + slot, e);
        }
    }

    // ë¸”ëŸ­ ë°ì´í„° íŒŒì‹±
    // ì¸í’‹: slot, parser
    // ì•„ì›ƒí’‹: block entity
    private Block parseMetaDataAndCreateBlock(Long slot, JsonParser parser) throws IOException {
        Block block = new Block();
        block.setSlot(slot);

        // ìœ„ì¹˜ [
        if (parser.nextToken() != JsonToken.START_ARRAY) {
            // ìœ„ì¹˜ {
        }

        // ìœ„ì¹˜ {
        while (parser.nextToken() != JsonToken.END_OBJECT) {
            // ìœ„ì¹˜ "blockHeight"
            String name = parser.getCurrentName();

            if ("blockHeight".equals(name)) {
                parser.nextToken();
                block.setBlockHeight(parser.getLongValue());

            } else if ("blockTime".equals(name)) {
                parser.nextToken();
                long time = parser.getLongValue();
                Instant instant = Instant.ofEpochMilli(time);
                OffsetDateTime blockTime = OffsetDateTime.ofInstant(instant, ZoneOffset.UTC);
                block.setBlockTime(blockTime);

            } else if ("blockhash".equals(name)) {
                parser.nextToken();
                block.setBlockHash(parser.getText());

            } else if ("parentSlot".equals(name)) {
                parser.nextToken();
                block.setParentSlot(parser.getLongValue());

            } else if ("previousBlockhash".equals(name)) {
                parser.nextToken();
                block.setPreviousBlockhash(parser.getText());

            } else if ("rewards".equals(name)) {
                // rewards
                parser.nextToken();
                // [
                parser.skipChildren();
                // ]
            }

            else if ("transactions".equals(name)) {
                parser.nextToken();
                // ìœ„ì¹˜: [
                break;

            } else {
                parser.nextToken();
                parser.skipChildren();
            }
        }

        block.setBakendStatus("PROCESSING");
        // defaultê°’ì´ì–´ì„œ ìƒê´€ì—†ìŒ
        return block;
    }

    // tx 100ê°œì”© ë¬¶ê¸° ì‹œì‘
    private Short streamAndPublishChunks(JsonParser parser, BlockId blockId) throws IOException {

        if (parser.currentToken() != JsonToken.START_ARRAY) {
            throw new IOException("íŒŒì„œê°€ ë°°ì—´ì˜ ì‹œì‘ ì§€ì ì— ìœ„ì¹˜í•˜ì§€ ì•ŠìŠµë‹ˆë‹¤.");
        }
        // ìœ„ì¹˜ [

        // chunk size
        final int CHUNK_SIZE = 100;
        Short chunkCounter = 0;
        int txInChunk = 0;
        int startTxIdx = 0;

        TxBatch.Builder txBatchBuilder = TxBatch.newBuilder();

        final long slot =  blockId.getSlot();
        final OffsetDateTime blockTime = blockId.getBlockTime();

        // parserê°€ txë¥¼ sizeë²ˆ ë™ì•ˆ ë²„í¼ì— ë„£ìŒ
        // ì—”ë“œ ì–´ë ˆì´ê°€ ê¸°ì¤€ì¸ ì´ìœ ëŠ” {ë§Œ ë§Œë‚˜ë©´ ì í”„í• ê±°ì—¬ì„œ..
        while (parser.nextToken() != JsonToken.END_ARRAY) {

            JsonNode node = objectMapper.readTree(parser);
            String strJson = objectMapper.writeValueAsString(node);

            SolanaTransaction.Builder txBuilder = SolanaTransaction.newBuilder();
            JsonFormat.parser()
                    .ignoringUnknownFields()
                    .merge(strJson, txBuilder);

            txBatchBuilder.addItems(txBuilder.build());
            txInChunk++;

            // if counter = size ë²ˆì´ë©´ íì— export
            if (txInChunk == CHUNK_SIZE) {
                publishChunk(slot, blockTime, chunkCounter, txBatchBuilder.build().toByteArray(), startTxIdx);
                chunkCounter++;
                startTxIdx += txInChunk;
                txInChunk = 0;
                txBatchBuilder.clear();
            }
        }

        if (txInChunk > 0) {
            publishChunk(slot, blockTime, chunkCounter, txBatchBuilder.build().toByteArray(), startTxIdx);
            txBatchBuilder.clear();
            chunkCounter++;
        }
        return chunkCounter;
    }

    private static final String EXCHANGE = "quicknode-block-exchange";
    private static final String CHUNK_ROUTING = "tx-chunk";

    private void publishChunk(
            long slot,
            OffsetDateTime blockTime,
            int chunkIndex,
            byte[] body,
            int startTxIdx
    ) {
        rabbitTemplate.convertAndSend(EXCHANGE, CHUNK_ROUTING, body, m -> {
            var props = m.getMessageProperties();
            props.setDeliveryMode(org.springframework.amqp.core.MessageDeliveryMode.PERSISTENT);

            props.setHeader("slot", slot);
            props.setHeader("blockTime", blockTime.toString());
            props.setHeader("chunkIndex", chunkIndex);
            props.setHeader("startTxIdx", startTxIdx);

            props.setMessageId(java.util.UUID.randomUUID().toString());
            return m;
        });

        logger.info("ğŸ“¤ chunk published: slot={}, idx={}, startTxIdx={}", slot, chunkIndex, startTxIdx);
    }
}

//                DateTimeFormatter fmt = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSS");
//                logger.debug("[{}]--- ë²„í¼ ë‚´ìš©ë¬¼ í™•ì¸ ({}ê°œ) ---", LocalDateTime.now().format(fmt), chunkBuffer.size());
//                for (JsonNode node : chunkBuffer) {
//                    // toPrettyString()ì„ ì‚¬ìš©í•˜ë©´ JSONì´ ì˜ˆì˜ê²Œ í¬ë§·íŒ…ë˜ì–´ ì¶œë ¥ë©ë‹ˆë‹¤.
//                    logger.debug(node.toPrettyString());
//                }
//                logger.debug("--- ë²„í¼ ë‚´ìš©ë¬¼ í™•ì¸ ì¢…ë£Œ ---");